--- a/frontend/daftarpelatihan.html
+++ b/frontend/daftarpelatihan.html
@@ -179,8 +179,8 @@
                 <li><a href="menupelatihan.html">Menu Pelatihan</a></li>
                 <li><a href="kalender.html">Kalender Pelatihan</a></li>
                 <li><a href="daftarpelatihan.html">Daftar Pelatihan</a></li>
-                <li><a href="privacy.html">Alur Pendaftaran</a></li>
-                <li><a href="gallery.html">Statistik</a></li>
+                <li><a href="alurpendaftaran.html">Alur Pendaftaran</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -231,7 +231,9 @@
         <h1>DAFTAR PELATIHAN</h1><br>
         <div>
           <h4>Selamat datang di Formulir Pendaftaran kami!</h4>
-          <p>Formulir pendaftaran kami berisi beberapa kelengkapan data, di mana Anda dapat memberikan informasi pribadi Anda secara rinci. Kami menjamin kerahasiaan dan keamanan data yang Anda berikan kepada kami.</p>
+          <p>Formulir pendaftaran kami berisi beberapa kelengkapan data, di mana Anda dapat memberikan informasi pribadi Anda secara rinci. Kami menjamin kerahasiaan dan keamanan data yang Anda berikan kepada kami.
+          </p>
+          
         </div>
       </div>
     </div><!-- End Page Title -->
@@ -573,6 +575,9 @@
         <!-- Process Steps -->
             <div class="process-steps mt-5" data-aos="fade-up" data-aos-delay="300">
               <div class="row justify-content-center text-center gy-4">
+                <!-- <p>
+                  Sebelum mengisi Formulir Pendaftaran, pastikan Anda mengikuti alur pendaftaran pelatihan dengan benar.
+                </p> -->
 
                 <!-- Step 1 -->
                 <div class="col-lg-2 col-md-6">
@@ -627,7 +632,7 @@
                   <div class="step-item">
                     <div class="step-number">5</div>
                     <div class="step-icon">
-                      <i class="bi bi-mortarboard-fill"></i>
+                      <i class="bi bi-journals"></i>
                     </div>
                     <h5>Mengikuti Pelatihan</h5>
                     <p>Ikuti pelatihan sesuai jadwal di lokasi yang telah ditentukan.</p>
