--- a/frontend/profil.html
+++ b/frontend/profil.html
@@ -179,8 +179,8 @@
                 <li><a href="menupelatihan.html">Menu Pelatihan</a></li>
                 <li><a href="kalender.html">Kalender Pelatihan</a></li>
                 <li><a href="daftarpelatihan.html">Daftar Pelatihan</a></li>
-                <li><a href="privacy.html">Alur Pendaftaran</a></li>
-                <li><a href="gallery.html">Statistik</a></li>
+                <li><a href="alurpendaftaran.html">Alur Pendaftaran</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -243,38 +243,120 @@
         <div class="row gy-4">
           <div class="col-lg-6">
             <div class="content">
-              <h2>Committed to Excellence in Healthcare</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </p>
-              <p>
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum sed ut perspiciatis.
-              </p>
+              <h4 style="font-weight: bold;">BE A HOSPITAL UNIVERSITY</h4>
+              <h5>PROSES BISNIS PELAYANAN RUMAH SAKIT + PROGRAM PENGEMBANGAN SDM + INSTITUSI PENYELENGGARA PELATIHAN BIDANG KESEHATAN.</h5><br>
+              <p class="lead">Histori Singkat RSMS Institusi Penyelenggara Pelatihan:</p>
+                      <ul>
+                        <li>Berawal dari Pengampuan oleh BAPELKES Provinsi Jawa Tengah pada tahun 2018–2019</li>
+                        <li>Divisi Diklat RSMS sebagai Institusi Penyelenggara Pelatihan berdasarkan SK KAPUS BPPSDMK Nomor HK.02.02/I/1826/2020</li>
+                        <li>Kategori Akreditasi A (berlaku 5 tahun)</li>
+                      </ul>
 
-              <div class="stats-container" data-aos="fade-up" data-aos-delay="200">
-                <div class="row gy-4">
-                  <div class="col-sm-6 col-lg-12 col-xl-6">
-                    <div class="stat-item">
-                      <div class="stat-number">
-                        <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>+
+                      <p class="lead">Pendayagunaan SDM RSMS:</p>
+                      <ul>
+                        <li>Tim Penyusun Mutu Pelatihan & Penjaminan Mutu Pelatihan</li>
+                        <li>TPM Tim Audit Mutu Internal</li>
+                        <li>Fasilitator Pelatihan (Narasumber & Instruktur)</li>
+                        <li>Panitia Penyelenggara Pelatihan</li>
+                      </ul>
+
+              <section id="home-about" class="home-about section">
+                <div class="container" data-aos="fade-up" data-aos-delay="100">
+                  <div class="row gy-5 align-items-center">
+
+                    <div class="col-lg-12" data-aos="fade-left" data-aos-delay="300">
+                      <div class="about-content">
+
+                        <!-- FOTO SERTIFIKAT -->
+                        <div class="col-md-6 d-flex justify-content-center align-items-start" data-aos="fade-up" data-aos-delay="400">
+                          <div class="feature-item">
+                            <div class="icon">
+                            </div>
+                            <div class="col-md-6 d-flex justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="500">
+                              <img 
+                                src="http://localhost:8080/pelatihanmargono/backend/uploads/profil/akreditasi.png"
+                                alt="Sertifikat Akreditasi"
+                                class="img-fluid sertifikat-img"
+                                style="cursor: zoom-in;"
+                                onclick="zoomFlyer(this.src)"
+                              >
+                            </div>
+                          </div>
+                        </div>
+                        <!-- FOTO SERTIFIKAT -->
+                        <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
+                          <div class="feature-item">
+                            <div class="icon">
+                            </div>
+                            <div class="col-md-6 d-flex justify-content-center align-items-start" data-aos="fade-up" data-aos-delay="500">
+                              <img 
+                                src="http://localhost:8080/pelatihanmargono/backend/uploads/profil/rumah sakit pendidikan.png"
+                                alt="Sertifikat Akreditasi"
+                                class="img-fluid rumah sakit pendidikan-img"
+                                style="cursor: zoom-in;"
+                                onclick="zoomFlyer(this.src)"
+                              >
+                            </div>
+                          </div>
+                        </div>
+
+                        <!-- BAGIAN ATAS (2 INFO) -->
+                        <div class="row g-4 mt-4">
+                          <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
+                            <div class="feature-item">
+                              <h4>RSUD Prof. Dr. Margono Soekarjo Purwokerto menjadi RS Kelas A Pendidikan sejak tahun 2023</h4>
+                            </div>
+                          </div>
+
+                          <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
+                            <div class="feature-item">
+                              <h4>
+                                SK Kemenkes RI Nomor HK.02.02/F/2866/2023 <br>
+                                <a href="http://asik.rsmargono.go.id:7222/pelatihan_diklat/assets/download/SK%20RSUD%20PROF%20DR.MARGONO%20SOEKARJO%20(UTAMA%20FK%20UNIV.JENDERAL%20SOEDIRMAN).pdf" 
+                                  target="_blank"
+                                  style="font-size: 14px; margin-left: 10px; text-decoration: none;">
+                                  Tampilan SK pdf/download
+                                </a>
+                              </h4>
+                            </div>
+                          </div>
+                        </div>
                       </div>
-                      <div class="stat-label">Years of Experience</div>
                     </div>
-                  </div>
-                  <div class="col-sm-6 col-lg-12 col-xl-6">
-                    <div class="stat-item">
-                      <div class="stat-number">
-                        <span data-purecounter-start="0" data-purecounter-end="50000" data-purecounter-duration="2" class="purecounter"></span>+
-                      </div>
-                      <div class="stat-label">Patients Treated</div>
-                    </div>
+
                   </div>
                 </div>
-              </div>
+
+                <!-- Modal Zoom Flyer -->
+                  <div id="zoomFlyerModal" class="zoom-modal">
+                    <div class="zoom-modal-content">
+                      <span class="zoom-close" onclick="closeZoom()">&times;</span>
+                      <img id="zoomFlyerImage" class="zoom-image">
+                    </div>
+                  </div>
+
+              </section>
+
+              <script>
+                // Zoom foto
+                function zoomFlyer(src) {
+                  document.getElementById("zoomFlyerImage").src = src;
+                  document.getElementById("zoomFlyerModal").style.display = "flex";
+                }
+
+                function closeZoom() {
+                  document.getElementById("zoomFlyerModal").style.display = "none";
+                }
+              </script>
+
 
               <div class="cta-buttons" data-aos="fade-up" data-aos-delay="300">
-                <a href="#" class="btn-primary">Meet Our Doctors</a>
-                <a href="#" class="btn-secondary">View Our Services</a>
+                <a href="#tim-diklat" class="btn-primary">Tim Diklat</a>
+                <a href="http://asik.rsmargono.go.id:7222/pelatihan_diklat/assets/download/STRUKTUR%20ORGANISASI%20DIKLIT.pdf" 
+                  class="btn-secondary" 
+                  target="_blank">
+                  Struktur Organisasi
+                </a>
               </div>
             </div>
           </div>
@@ -296,32 +378,34 @@
           </div>
         </div>
 
-        <div class="certifications-section" data-aos="fade-up" data-aos-delay="400">
+        <div id="tim-diklat" class="certifications-section" data-aos="fade-up" data-aos-delay="400">
           <div class="row">
             <div class="col-lg-12">
               <div class="section-header">
-                <h3>Accreditations &amp; Certifications</h3>
-                <p>We are proud to be accredited by leading healthcare organizations</p>
-              </div>
-              <div class="certifications-grid">
+                <h3 style="font-weight: bold";>TIM DIKLAT RSUD MARGONO SOEKARJO</h3>
+                <!-- <p>We are proud to be accredited by leading healthcare organizations</p> -->
+              <section>
+                <div class="certifications-grid">
                 <div class="certification-item">
                   <img src="assets/img/clients/clients-1.webp" alt="JCI Accreditation" class="img-fluid">
+                  </div>
+                  <div class="certification-item">
+                    <img src="assets/img/clients/clients-2.webp" alt="NABH Certification" class="img-fluid">
+                  </div>
+                  <div class="certification-item">
+                    <img src="assets/img/clients/clients-3.webp" alt="ISO 9001" class="img-fluid">
+                  </div>
+                  <div class="certification-item">
+                    <img src="assets/img/clients/clients-4.webp" alt="CAP Accreditation" class="img-fluid">
+                  </div>
+                  <div class="certification-item">
+                    <img src="assets/img/clients/clients-5.webp" alt="Medical Board" class="img-fluid">
+                  </div>
+                  <div class="certification-item">
+                    <img src="assets/img/clients/clients-6.webp" alt="Healthcare Association" class="img-fluid">
+                  </div>
                 </div>
-                <div class="certification-item">
-                  <img src="assets/img/clients/clients-2.webp" alt="NABH Certification" class="img-fluid">
-                </div>
-                <div class="certification-item">
-                  <img src="assets/img/clients/clients-3.webp" alt="ISO 9001" class="img-fluid">
-                </div>
-                <div class="certification-item">
-                  <img src="assets/img/clients/clients-4.webp" alt="CAP Accreditation" class="img-fluid">
-                </div>
-                <div class="certification-item">
-                  <img src="assets/img/clients/clients-5.webp" alt="Medical Board" class="img-fluid">
-                </div>
-                <div class="certification-item">
-                  <img src="assets/img/clients/clients-6.webp" alt="Healthcare Association" class="img-fluid">
-                </div>
+              </section>
               </div>
             </div>
           </div>
