--- a/frontend/menupelatihan.html
+++ b/frontend/menupelatihan.html
@@ -192,8 +192,8 @@
                 <li><a href="menupelatihan.html">Menu Pelatihan</a></li>
                 <li><a href="kalender.html">Kalender Pelatihan</a></li>
                 <li><a href="daftarpelatihan.html">Daftar Pelatihan</a></li>
-                <li><a href="privacy.html">Alur Pendaftaran</a></li>
-                <li><a href="gallery.html">Statistik</a></li>
+                <li><a href="alurpendaftaran.html">Alur Pendaftaran</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -298,19 +298,12 @@
                   <div class="container" data-aos="fade-up" data-aos-delay="100">
 
                   <!-- ==== MODAL DETAIL MENU PELATIHAN ==== -->
-                      <div id="modalPelatihan" class="modal" style="
-                        display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5);
-                        justify-content:center; align-items:center; z-index:9999;
-                      ">
-                        <div style="
-                          background:white; padding:25px; width:400px; border-radius:12px;
-                          box-shadow:0 6px 20px rgba(0,0,0,0.3); position: relative;
-                          text-align:left;
-                        ">
+                      <div id="modalPelatihan" class="modal">
+                        <div class="modal-content-pelatihan">
 
                           <!-- <img id="modalFlyer" style="width:100%; border-radius:8px; margin-bottom:15px;"> -->
 
-                          <h3 id="modalTitle" style="font-weight: bold;"></h3> <br>
+                          <h3 id="modalTitle" style="font-weight: bold; text-align:center;"></h3><br>
                           <img id="modalFlyer" 
                           style="width:100%; height:auto; margin-bottom:15px; border-radius:8px; object-fit:contain;">
                           <p><b>Kategori:</b> <span id="modalKategori"></span></p>
@@ -440,6 +433,9 @@
 
                         const p = data.find(x => x.id_pelatihan == id);
 
+                        const btnDetail = document.getElementById("btnDaftar");
+
+
                         // Fill flyer
                         document.getElementById("modalFlyer").src =
                           `http://localhost:5000/uploads/flyer/${p.flyer_url}`;
@@ -461,8 +457,30 @@
                         document.getElementById("modalPeserta").innerText =
                           p.sisa_kuota + " / " + p.kuota;
 
+                          // =============================
+                          // LOGIKA: Tanggal Sudah Lewat
+                          // =============================
+                          const today = new Date().setHours(0,0,0,0);
+                          const eventDate = new Date(p.tanggal_mulai).setHours(0,0,0,0);
+
+                          let sisaKuota = Number(p.sisa_kuota) || 0;
+                          const totalKuota = Number(p.kuota) || 0;
+
+                          if (today > eventDate) {
+                            // Set kuota ke 0 di tampilan
+                            sisaKuota = 0;
+                            document.getElementById("modalPeserta").innerText = `0 / ${totalKuota}`;
+
+                            btnDetail.innerText = "Pendaftaran Ditutup";
+                            btnDetail.style.background = "#777";
+                            btnDetail.style.cursor = "not-allowed";
+                            btnDetail.onclick = null;
+
+                            document.getElementById("modalPelatihan").style.display = "flex";
+                            return;
+                          }
+
                         // ===== Logika Tombol Daftar =====
-                        const btnDetail = document.getElementById("btnDaftar");
 
                         if (p.sisa_kuota <= 0) {
                           btnDetail.innerText = "Kuota Penuh";
@@ -479,11 +497,14 @@
                           };
                         }
 
+                        document.body.classList.add("no-scroll"); // ⬅ Kunci scroll halaman
+
                         document.getElementById("modalPelatihan").style.display = "flex";
                       }
 
                       function tutupModal() {
                         document.getElementById("modalPelatihan").style.display = "none";
+                        document.body.classList.remove("no-scroll"); // ⬅ Buka kembali scroll halaman
                       }
 
                       function zoomFlyer(flyerUrl) {
