--- a/frontend/struktur_organisasi.html
+++ b/frontend/struktur_organisasi.html
@@ -179,8 +179,8 @@
                 <li><a href="menupelatihan.html">Menu Pelatihan</a></li>
                 <li><a href="kalender.html">Kalender Pelatihan</a></li>
                 <li><a href="daftarpelatihan.html">Daftar Pelatihan</a></li>
-                <li><a href="privacy.html">Alur Pendaftaran</a></li>
-                <li><a href="gallery.html">Statistik</a></li>
+                <li><a href="alurpendaftaran.html">Alur Pendaftaran</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
               </ul>
             </li>
             <li class="dropdown">
