--- a/frontend/index.html
+++ b/frontend/index.html
@@ -876,26 +876,26 @@
       <section id="call-to-action" class="call-to-action section">
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="container section-title" data-aos="fade-up">
-            <h3>MENU CEPAT</h3>
+            <h2 style="font-weight: bold">SPO DIKLAT</h3>
               <div class="row features-row" data-aos="fade-up" data-aos-delay="400">
-                <div class="col-lg-4 col-md-6 mb-4">
-                  <div class="feature-card">
+                <div class="col-12 d-flex justify-content-center">
+                  <div class="feature-card text-center w-100" style="max-width: 800px";>
                     <div class="icon-wrapper">
-                      <i class="bi bi-heart-pulse"></i>
+                      <i class="bi bi-journal-bookmark-fill"></i>
                     </div>
-                    <h5>24/7 Emergency Care</h5>
-                    <p>
+                    <h5>Bagaimana Cara Mengikuti Diklat <br> di RSUD Prof. Dr. Margono Soekarjo Purwokerto?</h5>
+                    <!-- <p>
                       Ut enim ad minim veniam, quis nostrud exercitation ullamco
                       laboris nisi ut aliquip ex ea commodo.
-                    </p>
-                    <a href="#" class="feature-link">
-                      <span>Learn More</span>
+                    </p> -->
+                    <a href="https://rsmargono.jatengprov.go.id/ppid/dip/3_2023_27/persyaratan_perizinan_izin_yang_diterbitkan_dan_atau_dikeluarkan_berikut_dokumen_pendukungnya_dan_laporan_penaatan_izin_yang_diberikan" class="feature-link">
+                      <span>Pelajari Selengkapnya</span>
                       <i class="bi bi-arrow-right"></i>
                     </a>
                   </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 mb-4">
+                <!-- <div class="col-lg-4 col-md-6 mb-4">
                   <div class="feature-card">
                     <div class="icon-wrapper">
                       <i class="bi bi-calendar-check"></i>
@@ -910,9 +910,9 @@
                       <i class="bi bi-arrow-right"></i>
                     </a>
                   </div>
-                </div>
+                </div> -->
 
-                <div class="col-lg-4 col-md-6 mb-4">
+                <!-- <div class="col-lg-4 col-md-6 mb-4">
                   <div class="feature-card">
                     <div class="icon-wrapper">
                       <i class="bi bi-people"></i>
@@ -927,7 +927,7 @@
                       <i class="bi bi-arrow-right"></i>
                     </a>
                   </div>
-                </div>
+                </div> -->
               </div>
           </div>
         </div>
