--- a/frontend/menupelatihan.html
+++ b/frontend/menupelatihan.html
@@ -530,13 +530,11 @@
                 <div class="row">
                   <div class="col-lg-8 mx-auto text-center">
                     <div class="cta-content">
-                      <i class="bi bi-journal-plus"></i>
+                      <i class="bi bi-journal-bookmark-fill"></i>
                       <!-- <i class="fa fa-calendar-check"></i> -->
-                      <h3>Daftar pelatihan sekarang?</h3>
+                      <h3>Siapkah Anda Meningkatkan Kompetensi?</h3>
                       <p>
-                        Duis aute irure dolor in reprehenderit in voluptate velit
-                        esse cillum dolore eu fugiat nulla pariatur excepteur sint
-                        occaecat cupidatat non proident.
+                        Daftar pelatihan sekarang dengan klik tombol Daftar Pelatihan
                       </p>
                       <div class="cta-buttons">
                         <a href="daftarpelatihan.html" class="btn-book">Daftar Pelatihan</a>
