--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -1,20 +1,84 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Admin Dashboard - RSMS</title>
-  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-</head>
+  <head>
+    <title>Admin Dashboard - RSMS</title>
+    <link
+      href="../assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
 
-<body class="p-4">
+  <body class="p-4">
+    <div class="text-center mt-5 mb-4">
+      <h2 class="fw-bold">Dashboard Admin Diklat RSUD Margono</h2>
+      <p class="text-muted">Selamat datang di panel administrasi.</p>
+    </div>
 
-  <h2>Dashboard Admin</h2>
-  <p>Selamat datang di panel administrasi.</p>
+    <div class="list-group mx-auto" style="max-width: 900px">
+      <!-- Dropdown 1 -->
+      <div class="list-group-item p-0">
+        <button
+          class="btn w-100 text-start py-3 dropdown-toggle"
+          data-bs-toggle="collapse"
+          data-bs-target="#menuPelatihan"
+        >
+          Pelatihan
+        </button>
 
-  <div class="list-group mt-4">
-    <a href="pelatihan.html" class="list-group-item list-group-item-action">Manajemen Pelatihan</a>
-    <a href="peserta.html" class="list-group-item list-group-item-action">Data Pendaftar Pelatihan</a>
-    <a href="pembayaran.html" class="list-group-item list-group-item-action">Verifikasi Pembayaran</a>
-  </div>
+        <div class="collapse" id="menuPelatihan">
+          <a
+            href="pelatihan.html"
+            class="list-group-item list-group-item-action"
+          >
+            Manajemen Pelatihan
+          </a>
+          <a href="peserta.html" class="list-group-item list-group-item-action">
+            Data Pendaftar Pelatihan
+          </a>
+          <a
+            href="pembayaran.html"
+            class="list-group-item list-group-item-action"
+          >
+            Verifikasi Pembayaran
+          </a>
+          <a href="gallery.html" class="list-group-item list-group-item-action">
+            Gallery Diklat
+          </a>
+        </div>
+      </div>
 
-</body>
+      <!-- Dropdown 2 -->
+      <div class="list-group-item p-0 mt-2">
+        <button
+          class="btn w-100 text-start py-3 dropdown-toggle"
+          data-bs-toggle="collapse"
+          data-bs-target="#menuTim"
+        >
+          Tim & Mitra Pelatihan
+        </button>
+
+        <div class="collapse" id="menuTim">
+          <a
+            href="fasilitator.html"
+            class="list-group-item list-group-item-action"
+          >
+            Profesional Fasilitor dan Instruktur Tersertifikasi
+          </a>
+          <a
+            href="penyelenggara.html"
+            class="list-group-item list-group-item-action"
+          >
+            Tim Penyelenggara Pelatihan Tersertifikasi
+          </a>
+          <a
+            href="institusi.html"
+            class="list-group-item list-group-item-action"
+          >
+            Institusi Kerjasama
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </html>
