--- a/frontend/admin/pelatihan.html
+++ b/frontend/admin/pelatihan.html
@@ -19,6 +19,110 @@
     </style>
   </head>
   <body>
+    <!-- ===================== NAVBAR ADMIN ===================== -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="index.html">Admin DIKLAT</a>
+
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#adminNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="adminNav">
+          <ul class="navbar-nav ms-auto">
+            <!-- ==================== DROPDOWN PELATIHAN ==================== -->
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="dropdownPelatihan"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Pelatihan
+              </a>
+
+              <ul
+                class="dropdown-menu dropdown-menu-dark"
+                aria-labelledby="dropdownPelatihan"
+              >
+                <li>
+                  <a class="dropdown-item" href="pelatihan.html"
+                    >Manajemen Pelatihan</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="peserta.html"
+                    >Data Pendaftar Pelatihan</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="pembayaran.html"
+                    >Verifikasi Pembayaran</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="gallery.html"
+                    >Gallery Diklat</a
+                  >
+                </li>
+              </ul>
+            </li>
+
+            <!-- ==================== DROPDOWN TIM & MITRA ==================== -->
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="dropdownTim"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Tim & Mitra Pelatihan
+              </a>
+
+              <ul
+                class="dropdown-menu dropdown-menu-dark"
+                aria-labelledby="dropdownTim"
+              >
+                <li>
+                  <a class="dropdown-item" href="fasilitator.html">
+                    Profesional Fasilitor & Instruktur Tersertifikasi
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="penyelenggara.html">
+                    Tim Penyelenggara Pelatihan Tersertifikasi
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="institusi.html">
+                    Institusi Kerjasama
+                  </a>
+                </li>
+              </ul>
+            </li>
+
+            <!-- ==================== LOGOUT ==================== -->
+            <li class="nav-item">
+              <a class="nav-link text-danger fw-bold" href="logout.html"
+                >Logout</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- ===================== END NAVBAR ===================== -->
+
     <div class="container py-4">
       <h2 class="mb-4 fw-bold">📚 Kelola Pelatihan</h2>
 
@@ -191,6 +295,7 @@
                 <th>No</th>
                 <th>Nama</th>
                 <th>Deskripsi</th>
+                <th>Flyer</th>
                 <th>Lokasi</th>
                 <th>Alamat Lengkap</th>
                 <th>Narasumber</th>
@@ -203,7 +308,6 @@
                 <th>Tipe Pelatihan</th>
                 <th>Durasi Pelatihan</th>
                 <th>Status</th>
-                <!-- <th>Flyer</th> -->
                 <th>Aksi</th>
               </tr>
             </thead>
@@ -239,8 +343,8 @@
         // FORMAT TANGGAL UNTUK INPUT <date>
         // =========================
         function formatForInput(dateString) {
-            if (!dateString) return "";
-            return new Date(dateString).toISOString().split("T")[0];
+          if (!dateString) return "";
+          return new Date(dateString).toISOString().split("T")[0];
         }
 
         // =========================
@@ -258,6 +362,11 @@
           <td>${index + 1}</td>
           <td>${item.nama_pelatihan}</td>
           <td>${item.deskripsi ?? "-"}</td>
+          <td> <img src="http://localhost:5000/uploads/flyer/${
+            item.flyer_url
+          }" class="thumb-foto"
+          style="width:70px;height:70px;object-fit:cover";>
+          </td>
           <td>${item.lokasi ?? "-"}</td>
           <td>${item.alamat_lengkap ?? "-"}</td>
           <td>${item.narasumber ?? "-"}</td>
@@ -269,7 +378,6 @@
           <td>${item.kategori ?? "-"}</td>
           <td>${item.tipe_pelatihan ?? "-"}</td>
           <td>${item.durasi ?? "-"}</td>
-
           <td>
             <span class="badge bg-${
               item.status === "publish"
