--- a/frontend/admin/editfasilitator.html
+++ b/frontend/admin/editfasilitator.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <title>Edit Fasilitator</title>
 
+    <!-- PROTEKSI LOGIN ADMIN -->
+    <script>
+      const admin = localStorage.getItem("admin");
+      if (!admin) {
+        window.location.href = "loginadmin.html";
+      }
+    </script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../assets/css/main.css" />
 
     <style>
       body {
@@ -263,7 +272,7 @@
         modal.show();
       }
     </script>
-
+    <script src="admin_check.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
