--- a/frontend/admin/editpelatihan.html
+++ b/frontend/admin/editpelatihan.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <title>Edit Pelatihan</title>
+    
+    <!-- PROTEKSI LOGIN ADMIN -->
+    <script>
+      const admin = localStorage.getItem("admin");
+      if (!admin) {
+        window.location.href = "loginadmin.html";
+      }
+    </script>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../assets/css/main.css" />
 
     <style>
       /* body {
@@ -428,7 +437,7 @@
         zoomModal.show();
       }
     </script>
-
+    <script src="admin_check.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
