--- a/frontend/admin/fasilitator.html
+++ b/frontend/admin/fasilitator.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <title>Admin - Fasilitator</title>
+    
+    <!-- PROTEKSI LOGIN ADMIN -->
+    <script>
+      const admin = localStorage.getItem("admin");
+      if (!admin) {
+        window.location.href = "loginadmin.html";
+      }
+    </script>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../assets/css/main.css" />
 
     <style>
       body {
@@ -305,7 +314,7 @@
           });
       });
     </script>
-
+    <script src="admin_check.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
