--- a/frontend/admin/gallery.html
+++ b/frontend/admin/gallery.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <title>Admin - Gallery</title>
 
+    <!-- PROTEKSI LOGIN ADMIN -->
+    <script>
+      const admin = localStorage.getItem("admin");
+      if (!admin) {
+        window.location.href = "loginadmin.html";
+      }
+    </script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../assets/css/main.css" />
 
     <style>
       body {
@@ -183,7 +192,7 @@
       <div class="card">
         <div class="card-header bg-dark text-white">Daftar Gallery</div>
 
-        <div class="col-md-4 mt-3 ms-3">
+        <div class="col-md-4 mt-3">
           <input
             type="text"
             id="searchGallery"
@@ -315,7 +324,7 @@
           });
       });
     </script>
-
+    <script src="admin_check.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
