--- a/frontend/admin/institusi.html
+++ b/frontend/admin/institusi.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <title>Admin - Institusi Kerjasama</title>
 
+    <!-- PROTEKSI LOGIN ADMIN -->
+    <script>
+      const admin = localStorage.getItem("admin");
+      if (!admin) {
+        window.location.href = "loginadmin.html";
+      }
+    </script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../assets/css/main.css" />
 
     <style>
       body {
@@ -221,7 +230,9 @@
             <tr>
               <td>${index + 1}</td>
               <td>
-                  <img src="http://localhost:5000/uploads/institusi/${item.foto}" class="thumb-foto">
+                  <img src="http://localhost:5000/uploads/institusi/${
+                    item.foto
+                  }" class="thumb-foto">
                 </td>
               <td>${item.nama}</td>
               <td>
@@ -303,7 +314,7 @@
           });
       });
     </script>
-
+    <script src="admin_check.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
