--- a/frontend/admin/pelatihan.html
+++ b/frontend/admin/pelatihan.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <title>Admin - Kelola Pelatihan</title>
 
+    <!-- PROTEKSI LOGIN ADMIN -->
+    <script>
+      const admin = localStorage.getItem("admin");
+      if (!admin) {
+        window.location.href = "loginadmin.html";
+      }
+    </script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../assets/css/main.css" />
 
     <style>
       body {
@@ -58,7 +67,7 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="peserta.html"
+                  <a class="dropdown-item" href="pendaftaran.html"
                     >Data Pendaftar Pelatihan</a
                   >
                 </li>
@@ -467,6 +476,7 @@
         }
       });
     </script>
+    <script src="admin_check.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
