--- a/frontend/admin/pembayaran.html
+++ b/frontend/admin/pembayaran.html
@@ -1,14 +1,232 @@
-<table class="table">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>ID Pendaftaran</th>
-      <th>Bukti</th>
-      <th>Status</th>
-      <th>Aksi</th>
-    </tr>
-  </thead>
-  <tbody id="bayarTable"></tbody>
-</table>
+<!DOCTYPE html>
+<html lang="id">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Admin - Pembayaran Peserta</title>
 
-<script src="js/pembayaran.js"></script>
+    <!-- PROTEKSI LOGIN ADMIN -->
+    <script>
+      const admin = localStorage.getItem("admin");
+      if (!admin) {
+        window.location.href = "loginadmin.html";
+      }
+    </script>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../assets/css/main.css" />
+
+    <style>
+      body {
+        background: #f5f6fa;
+      }
+      .card {
+        border-radius: 10px;
+      }
+    </style>
+  </head>
+
+  <body>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="index.html">Admin DIKLAT</a>
+
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#adminNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="adminNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+                >Pelatihan</a
+              >
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li>
+                  <a class="dropdown-item" href="pelatihan.html"
+                    >Manajemen Pelatihan</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="pendaftaran.html"
+                    >Data Pendaftar</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="pembayaran.html"
+                    >Verifikasi Pembayaran</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="gallery.html"
+                    >Gallery Diklat</a
+                  >
+                </li>
+              </ul>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+                >Tim & Mitra</a
+              >
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li>
+                  <a class="dropdown-item" href="fasilitator.html"
+                    >Fasilitator</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="penyelenggara.html"
+                    >Penyelenggara</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="institusi.html"
+                    >Institusi Kerjasama</a
+                  >
+                </li>
+              </ul>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link text-danger fw-bold" href="logout.html"
+                >Logout</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- CONTENT -->
+    <div class="container py-4">
+      <h2 class="fw-bold mb-4">💰 Verifikasi Pembayaran Peserta</h2>
+
+      <div class="card">
+        <div class="card-header bg-dark text-white">Data Pembayaran Masuk</div>
+
+        <div class="col-md-4 mt-3 ms-3">
+          <input
+            type="text"
+            id="searchPembayaran"
+            placeholder="Cari..."
+            class="form-control"
+          />
+        </div>
+
+        <div class="card-body">
+          <table class="table table-bordered">
+            <thead class="table-light">
+              <tr>
+                <th>No</th>
+                <th>Nama Peserta</th>
+                <th>Pelatihan</th>
+                <th>No WA</th>
+                <th>Bukti Transfer</th>
+                <th>Status</th>
+                <th>Aksi</th>
+              </tr>
+            </thead>
+
+            <tbody id="tablePembayaran"></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <!-- JS -->
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const API = "http://localhost:5000/api/pembayaran";
+        const tableBody = document.getElementById("tablePembayaran");
+
+        async function loadPembayaran() {
+          const res = await fetch(API);
+          const data = await res.json();
+
+          tableBody.innerHTML = "";
+
+          data.forEach((item, index) => {
+            tableBody.innerHTML += `
+              <tr>
+                <td>${index + 1}</td>
+                <td>${item.nama_peserta}</td>
+                <td>${item.nama_pelatihan}</td>
+                <td>${item.no_wa}</td>
+
+                <td>
+                  <a href="http://localhost:5000/uploads/bukti_transfer/${
+                    item.bukti_transfer
+                  }"
+                     target="_blank"
+                     class="btn btn-sm btn-secondary">Lihat</a>
+                </td>
+
+                <td>
+                  <span class="badge bg-${
+                    item.status_bayar === "PENDING"
+                      ? "warning"
+                      : item.status_bayar === "VALID"
+                      ? "success"
+                      : "danger"
+                  }">
+                    ${item.status_bayar}
+                  </span>
+                </td>
+
+                <td>
+                    <button class="btn btn-warning btn-sm" onclick="window.location.href='editpembayaran.html?id=${
+                      item.id_pembayaran
+                    }'">Edit</button>
+                  
+                  <button class="btn btn-danger btn-sm" onclick="hapuspembayaran${
+                    item.id_pembayaran
+                  })">Hapus</button>
+                </td>
+              </tr>
+            `;
+          });
+        }
+
+        loadPembayaran();
+
+        // DELETE
+        window.hapus = async (id) => {
+          if (!confirm("Hapus pembayaran ini?")) return;
+          const res = await fetch(`${API}/${id}`, { method: "DELETE" });
+          const data = await res.json();
+          alert(data.message);
+          loadPembayaran();
+        };
+
+        // LIVE SEARCH
+        document
+          .getElementById("searchPembayaran")
+          .addEventListener("input", function () {
+            const keyword = this.value.toLowerCase();
+            document.querySelectorAll("#tablePembayaran tr").forEach((row) => {
+              row.style.display = row.innerText.toLowerCase().includes(keyword)
+                ? ""
+                : "none";
+            });
+          });
+      });
+    </script>
+    <script src="admin_check.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
+</html>
