--- a/frontend/admin/penyelenggara.html
+++ b/frontend/admin/penyelenggara.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <title>Admin - Penyelenggara</title>
 
+    <!-- PROTEKSI LOGIN ADMIN -->
+    <script>
+      const admin = localStorage.getItem("admin");
+      if (!admin) {
+        window.location.href = "loginadmin.html";
+      }
+    </script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../assets/css/main.css" />
 
     <style>
       body {
