--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -45,7 +45,10 @@
           >
             Manajemen Pelatihan
           </a>
-          <a href="peserta.html" class="list-group-item list-group-item-action">
+          <a
+            href="pendaftaran.html"
+            class="list-group-item list-group-item-action"
+          >
             Data Pendaftar Pelatihan
           </a>
           <a
@@ -104,6 +107,6 @@
       }
     }
   </script>
-  <script src="admin_check.js"></script>
+  <script src="http://localhost:5000/static/admin_check.js"></script>
   <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </html>
