--- a/frontend/admin/pelatihan.html
+++ b/frontend/admin/pelatihan.html
@@ -476,7 +476,7 @@
         }
       });
     </script>
-    <script src="admin_check.js"></script>
+    <script src="http://localhost:5000/static/admin_check.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
