--- a/frontend/admin/editinstitusi.html
+++ b/frontend/admin/editinstitusi.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Edit Institusi Kerjasama</title>
-    
+
     <!-- PROTEKSI LOGIN ADMIN -->
     <script>
       const admin = localStorage.getItem("admin");
@@ -73,7 +73,7 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="peserta.html"
+                  <a class="dropdown-item" href="pendaftaran.html"
                     >Data Pendaftar Pelatihan</a
                   >
                 </li>
@@ -209,7 +209,7 @@
       document.addEventListener("DOMContentLoaded", async () => {
         const API = "http://localhost:5000/api/institusi";
 
-        // Ambil id dari URL
+        // Ambil ID dari URL
         const urlParams = new URLSearchParams(window.location.search);
         const id = urlParams.get("id");
 
@@ -219,24 +219,40 @@
           return;
         }
 
-        // LOAD DATA
+        // ===============================
+        // LOAD DATA INSTITUSI
+        // ===============================
         async function loadData() {
           const res = await fetch(`${API}/${id}`);
           const data = await res.json();
 
-          document.getElementById("edit_id").value = data.id_institusi;
-          document.getElementById("edit_nama").value = data.nama;
-          document.getElementById("edit_link").value = data.link_terkait || "";
-          document.getElementById("edit_status").value = data.status;
+          // ===============================
+          // FIX ➜ API mengembalikan ARRAY, bukan object
+          // ===============================
+          const institusi = Array.isArray(data) ? data[0] : data;
+
+          if (!institusi) {
+            alert("Data tidak ditemukan!");
+            window.location.href = "institusi.html";
+            return;
+          }
+
+          document.getElementById("edit_id").value = institusi.id_institusi;
+          document.getElementById("edit_nama").value = institusi.nama;
+          document.getElementById("edit_link").value =
+            institusi.link_terkait || "";
+          document.getElementById("edit_status").value = String(institusi.status);
 
           document.getElementById(
             "previewFoto"
-          ).src = `http://localhost:5000/uploads/institusi/${data.foto}`;
+          ).src = `http://localhost:5000/uploads/institusi/${institusi.foto}`;
         }
 
         await loadData();
 
-        // SUBMIT EDIT
+        // ===============================
+        // SUBMIT UPDATE
+        // ===============================
         document
           .getElementById("formEditInstitusi")
           .addEventListener("submit", async (e) => {
@@ -254,9 +270,7 @@
             const result = await res.json();
             alert(result.message);
 
-            if (res.ok) {
-              window.location.href = "institusi.html";
-            }
+            if (res.ok) window.location.href = "institusi.html";
           });
       });
 
@@ -265,13 +279,11 @@
         const src = document.getElementById("previewFoto").src;
         document.getElementById("zoomFotoImg").src = src;
 
-        const modal = new bootstrap.Modal(
-          document.getElementById("zoomFotoModal")
-        );
-        modal.show();
+        new bootstrap.Modal(document.getElementById("zoomFotoModal")).show();
       }
     </script>
-    <script src="admin_check.js"></script>
+
+    <script src="http://localhost:5000/static/admin_check.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
