--- a/frontend/admin/editpelatihan.html
+++ b/frontend/admin/editpelatihan.html
@@ -78,7 +78,7 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="peserta.html"
+                  <a class="dropdown-item" href="pendaftaran.html"
                     >Data Pendaftar Pelatihan</a
                   >
                 </li>
@@ -437,7 +437,7 @@
         zoomModal.show();
       }
     </script>
-    <script src="admin_check.js"></script>
+    <script src="http://localhost:5000/static/admin_check.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
