--- a/frontend/admin/editpembayaran.html
+++ b/frontend/admin/editpembayaran.html
@@ -130,6 +130,8 @@
         const urlParams = new URLSearchParams(window.location.search);
         const id = urlParams.get("id");
 
+        let idPendaftaran = null;
+
         if (!id) {
           alert("ID pembayaran tidak ditemukan.");
           window.location.href = "pembayaran.html";
@@ -148,6 +150,8 @@
             window.location.href = "pembayaran.html";
             return;
           }
+
+          idPendaftaran = pembayaran.id_pendaftaran;
 
           document.getElementById("id_pembayaran").value =
             pembayaran.id_pembayaran;
@@ -176,20 +180,42 @@
 
             const status = document.getElementById("status_bayar").value;
 
-            let endpoint = "";
+            let pembayaranURL = "";
+            let pendaftaranURL = "";
 
-            if (status === "VALID") endpoint = `${API}/${id}/validate`;
-            if (status === "INVALID") endpoint = `${API}/${id}/invalid`;
+            // VALID
+            if (status === "VALID") {
+              pembayaranURL = `${API}/${id}/validate`;
+              pendaftaranURL = `http://localhost:5000/api/pendaftaran/${idPendaftaran }/payment-valid`;
+            }
 
-            const res = await fetch(endpoint, { method: "PUT" });
+            // INVALID
+            else if (status === "INVALID") {
+              pembayaranURL = `${API}/${id}/invalid`;
+              pendaftaranURL = `http://localhost:5000/api/pendaftaran/${idPendaftaran }/payment-invalid`;
+            }
+
+            // PENDING
+            else if (status === "PENDING") {
+              pembayaranURL = `${API}/${id}/pending`;
+              // status pendaftaran tidak berubah kalau pending
+            }
+
+            // EXECUTE UPDATE PEMBAYARAN
+            const res = await fetch(pembayaranURL, { method: "PUT" });
             const result = await res.json();
-
             alert(result.message);
+
+            // UPDATE PENDAFTARAN (hanya VALID/INVALID)
+            if (status === "VALID" || status === "INVALID") {
+              await fetch(pendaftaranURL, { method: "PUT" });
+            }
+
             window.location.href = "pembayaran.html";
           });
       });
     </script>
-    <script src="admin_check.js"></script>
+    <script src="http://localhost:5000/static/admin_check.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
