--- a/frontend/admin/editpendaftaran.html
+++ b/frontend/admin/editpendaftaran.html
@@ -213,9 +213,15 @@
                 <option value="Menunggu Verifikasi Berkas">
                   Menunggu Verifikasi Berkas
                 </option>
+                <option value="Verifikasi Berkas Invalid">
+                  Verifikasi Berkas Invalid
+                </option>
                 <option value="Menunggu Pembayaran">Menunggu Pembayaran</option>
+                <option value="Verifikasi Pembayaran Invalid">
+                  Verifikasi Pembayaran Invalid
+                </option>
                 <option value="Diterima">Diterima</option>
-                <option value="Ditolak">Ditolak</option>
+                <option value="Selesai">Selesai</option>
               </select>
             </div>
 
@@ -319,36 +325,17 @@
 
           const value = jk.toLowerCase().trim();
 
-          if (value === "pria" || value === "l" || value === "laki-laki") {
-            return "Pria";
-          }
-          if (value === "wanita" || value === "p" || value === "perempuan") {
-            return "Wanita";
-          }
+          if (["pria", "l", "laki-laki"].includes(value)) return "Pria";
+          if (["wanita", "p", "perempuan"].includes(value)) return "Wanita";
 
           return "";
         }
 
         // ============================
-        // NORMALIZE STATUS
-        // ============================
-        function normalizeStatus(status) {
-          if (!status) return "";
-
-          status = status.toLowerCase().trim();
-
-          if (status.includes("verifikasi"))
-            return "Menunggu Verifikasi Berkas";
-          if (status.includes("pembayaran")) return "Menunggu Pembayaran";
-          if (status.includes("terima")) return "Diterima";
-          if (status.includes("tolak")) return "Ditolak";
-
-          return "";
-        }
-
         // LOAD DATA
+        // ============================
         async function loadData() {
-          const res = await fetch(`${API}`);
+          const res = await fetch(API);
           const data = await res.json();
 
           const peserta = data.find((p) => p.id_pendaftaran == id);
@@ -359,23 +346,29 @@
             return;
           }
 
+          // Isi semua field form
           document.getElementById("edit_id_pendaftaran").value =
             peserta.id_pendaftaran;
+
           document.getElementById("edit_nama_peserta").value =
             peserta.nama_peserta;
+
           document.getElementById("edit_pelatihan").value =
             peserta.nama_pelatihan;
+
           document.getElementById("edit_nik").value = peserta.nik;
           document.getElementById("edit_nip").value = peserta.nip;
+
           document.getElementById("edit_jenis_kelamin").value = normalizeJK(
             peserta.jenis_kelamin
           );
 
           document.getElementById("edit_profesi").value = peserta.profesi ?? "";
           document.getElementById("edit_no_wa").value = peserta.no_wa;
-          document.getElementById("edit_status").value = normalizeStatus(
-            peserta.status
-          );
+
+          // 💡 Tidak perlu normalizeStatus karena ENUM DB sudah rapi
+          document.getElementById("edit_status").value = peserta.status;
+
           document.getElementById("edit_email").value = peserta.email;
 
           // Surat Tugas
@@ -395,7 +388,9 @@
 
         await loadData();
 
+        // ============================
         // SAVE UPDATE
+        // ============================
         document
           .getElementById("formEditPendaftaran")
           .addEventListener("submit", async (e) => {
@@ -426,7 +421,8 @@
         new bootstrap.Modal(document.getElementById("modalZoomFoto")).show();
       }
     </script>
-    <script src="admin_check.js"></script>
+
+    <script src="http://localhost:5000/static/admin_check.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
