--- a/frontend/admin/pendaftaran.html
+++ b/frontend/admin/pendaftaran.html
@@ -205,15 +205,19 @@
 
                 <td>
                   <span class="badge bg-${
-                    item.status === "menunggu verifikasi berkas"
+                    item.status === "Menunggu Verifikasi Berkas"
                       ? "warning"
-                      : item.status === "menunggu pembayaran"
-                      ? "primary"
-                      : item.status === "diterima"
-                      ? "success"
-                      : item.status === "ditolak"
+                      : item.status === "Verifikasi Berkas Invalid"
                       ? "danger"
-                      : "secondary"
+                      : item.status === "Menunggu Pembayaran"
+                      ? "primary"
+                      : item.status === "Verifikasi Pembayaran Invalid"
+                      ? "danger"
+                      : item.status === "Diterima"
+                      ? "success"
+                      : item.status === "Selesai"
+                      ? "secondary"
+                      : "dark"
                   }">
                     ${item.status}
                   </span>
@@ -226,7 +230,7 @@
                   
                   <button class="btn btn-danger btn-sm" onclick="hapusPendaftaran(${
                     item.id_pendaftaran
-                  })">hHapus</button>
+                  })">Hapus</button>
                 </td>
               </tr>
             `;
@@ -266,7 +270,7 @@
           });
       });
     </script>
-    <script src="admin_check.js"></script>
+    <script src="http://localhost:5000/static/admin_check.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
